--- a/.github/workflows/ZeroThreat.yml
+++ b/.github/workflows/ZeroThreat.yml
@@ -23,14 +23,10 @@ jobs:
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v4
+    - uses: actions/checkout@v4
 
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
-
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
-        run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
+    - name: Run Custom Action for Vulnerability Scan
+      uses: zerothreatai/github-action@0.0.3
+      with:
+        ZT_TOKEN: ${{ secrets.ZT_TOKEN }}
+        WAIT_FOR_ANALYSIS: true
